[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fade/Fade.tscn" type="PackedScene" id=1]
[ext_resource path="res://TitleScreen/fonts/mybadfont2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Player/sounds/Randomize21.wav" type="AudioStream" id=5]
[ext_resource path="res://TitleScreen/MenuButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://TitleScreen/images/title.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=2]
action = "ui_accept"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 759.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Menu"]
margin_right = 709.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.690196, 0.760784, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 4
text = "A BAD SIGN"
align = 1

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_top = 109.0
margin_right = 709.0
margin_bottom = 457.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="StartGameButton" parent="Menu/Buttons" instance=ExtResource( 6 )]
margin_top = 0.0
margin_right = 709.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
shortcut = SubResource( 3 )
text = "START GAME"
flat = false

[node name="HowToButton" parent="Menu/Buttons" instance=ExtResource( 6 )]
margin_top = 60.0
margin_right = 709.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
text = "HOW TO PLAY"
flat = false

[node name="Label" type="Label" parent="Menu"]
margin_top = 461.0
margin_right = 709.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.101961, 0.109804, 0.172549, 1 )
text = "BY CADAEIBFE
FOR LUDUM DARE 47"
align = 2

[node name="Fade" parent="." instance=ExtResource( 1 )]
visible = false

[node name="StartGameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="mouse_entered" from="Menu/Buttons/StartGameButton" to="." method="_on_StartGameButton_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/StartGameButton" to="." method="_on_StartGameButton_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="mouse_entered" from="Menu/Buttons/HowToButton" to="." method="_on_HowToButton_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/HowToButton" to="." method="_on_HowToButton_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/HowToButton" to="." method="_on_HowToButton_pressed"]
[connection signal="fade_complete" from="Fade" to="." method="_on_Fade_fade_complete"]
